# openrank

./: .gitignore  .gitmodules  Cargo.toml  README.md  cp.txt  cp2.txt  docker-compose.yml  generate-docker-compose.sh  run_tests.sh  rust-toolchain.toml  rustfmt.toml
.github/: pull_request_template.md
.github/workflows/: clippy.yml  diff.yml  install.yml  release-openrank-sdk-binary.yml  test.yml
block-builder/: .env.temp  Cargo.toml  Dockerfile  config.toml
block-builder/src/: coordinator.rs  error.rs  lib.rs  main.rs  sequencer.rs
block-builder/src/sequencer/: mod.rs  rpc.rs  seq.rs
common/: Cargo.toml
common/src/: config.rs  db.rs  error.rs  lib.rs  misc.rs  net.rs  query.rs  result.rs  topics.rs  tx_event.rs  txs.rs
common/src/algos/: et.rs  mod.rs
common/src/db/: items.rs  mod.rs
common/src/file_storage/: mod.rs
common/src/merkle/: fixed.rs  incremental.rs  mod.rs
common/src/runners/: compute_runner.rs  mod.rs  verification_runner.rs  verifiy_runner.rs
common/src/tx/: block.rs  compute.rs  mod.rs  trust.rs
common/src/txs/: block.rs  compute.rs  job.rs  mod.rs  trust.rs
compute-manager-smart-contract/: README.md
compute-manager-smart-contract/script/: DeployComputeManager.s.sol
compute-manager-smart-contract/smart-contract-client/: Cargo.toml
compute-manager-smart-contract/smart-contract-client/src/: sol.rs
compute-manager-smart-contract/src/: ComputeManager.sol
compute-manager-smart-contract/test/: ComputeManager.t.sol
computer/: .env.temp  Cargo.toml  Dockerfile  config.toml
computer/src/: algo.rs  error.rs  lib.rs  main.rs  rpc.rs  runner.rs
computer/src/algos/: et.rs
da/: Cargo.toml  Dockerfile
dht/: Cargo.toml
dht/src/: main.rs
jobmanager-smart-contract/script/: JobManager.s.sol
jobmanager-smart-contract/src/: JobManager.sol  RLPEncode.sol  RLPReader.sol
jobmanager-smart-contract/test/: JobManager.t.sol
openrank/: Cargo.toml
openrank-sdk/: Cargo.toml  README.md  config.toml  seed.csv
openrank-sdk/src/: lib.rs  main.rs
playground/: .env.temp  config.toml  run_tests.sh  test_vector.csv
relayer/: .env.example  .gitignore  Cargo.toml  README.md  config.toml
relayer-client/: Cargo.toml
relayer-client/abi/: JobManager.json
relayer-client/src/: lib.rs
relayer/assets/: schema.sql
relayer/src/: lib.rs  main.rs  postgres.rs  types.rs
relayer/src/api/: schema.rs  server.rs
sequencer/: Cargo.toml  Dockerfile  README.md  config.toml
sequencer/src/: lib.rs  main.rs  rpc.rs  seq.rs
smart-contract-client/: Cargo.toml  config.toml
smart-contract-client/abi/: ComputeManager.json  JobManager.json
smart-contract-client/src/: lib.rs  sol.rs
unicast/: Cargo.toml
unicast/src/: handler.rs  lib.rs  main.rs  protocol.rs
verifier/: .env.temp  Cargo.toml  Dockerfile  config.toml
verifier/src/: error.rs  lib.rs  main.rs  rpc.rs  runner.rs  txs.rs  unicast.rs
