[workspace]
resolver = "2"
members = [
    "sequencer",
    "block-builder",
    "common",
    "computer",
    "da",
    "openrank-sdk",
    "verifier",
    "smart-contract-client",
]

[workspace.package]
version = "0.1.0"
authors = [
    "Eugene Kim <ek@karma3labs.com>",
    "Filip Lazović <filip@karma3labs.com>",
]
edition = "2021"
license = "MIT"

[workspace.dependencies]
libp2p = "0.53.2"
futures = "0.3.30"
tokio = { version = "1.38", default-features = false }
tracing = "0.1.37"
tracing-subscriber = "0.3"
hex = "0.4.3"
rand = "0.8.5"
alloy-rlp = "0.3.5"
alloy-rlp-derive = "0.3.5"
dotenv = "0.15.0"
serde = "1.0"
serde_json = "1.0"
toml = "0.8"
rocksdb = "0.22.0"
sha3 = "0.10.8"
jsonrpsee = "=0.24.5"
k256 = "0.13.3"
directories = "5.0.1"
thiserror = "1.0.63"
clap = "4.5.9"
