[package]
name = "openrank-block-builder"
description = "OpenRank - Block Builder Node"
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrank-sequencer = { workspace = true }
openrank-common = { workspace = true }
openrank-smart-contract-client = { git = "https://github.com/openrankprotocol/score-manager.git", version = "0.1.0" }
futures = { workspace = true }
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "gossipsub",
    "macros",
    "identify",
] }
tokio = { workspace = true, features = ["full", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex = { workspace = true, features = ["serde"] }
rand = { workspace = true }
alloy-rlp = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dotenv = { workspace = true }
k256 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
getset = { workspace = true }
