[package]
name = "openrank-common"
description = "Common library for OpenRank codebase"
license = "MIT"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "gossipsub",
    "macros",
    "mdns",
    "identify",
] }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
