[package]
name = "openrank-common"
description = "Common library for OpenRank codebase"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[features]
db = ["rocksdb"]

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "gossipsub",
    "macros",
    "mdns",
    "identify",
] }
alloy-rlp = { workspace = true }
alloy-rlp-derive = { workspace = true }
getset = { workspace = true }
alloy-primitives = { workspace = true, features = ["serde", "rlp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
hex = { workspace = true, features = ["serde"] }
tracing = { workspace = true }
rocksdb = { workspace = true, features = [
    "multi-threaded-cf",
], optional = true }
sha3 = { workspace = true }
k256 = { workspace = true }
directories = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
rayon = { workspace = true }
base64 = { workspace = true }

[dev-dependencies]
rand = "0.8.5"
