[package]
name = "openrank-computer"
description = "OpenRank - Computer Node"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrank-common = { workspace = true, features = ["db"] }
hex = { workspace = true, features = ["serde"] }
futures = { workspace = true }
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "gossipsub",
    "macros",
    "identify",
] }
tokio = { workspace = true, features = ["full", "macros"] }
tracing = { workspace = true }
alloy-rlp = { workspace = true }
dotenv = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
getset = { workspace = true }
