[package]
name = "dht"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
async-std = { version = "1.12", features = ["attributes"] }
async-trait = "0.1"
futures = "0.3.30"
libp2p = { workspace = true, features = [
    "async-std",
    "identify",
    "macros",
    "noise",
    "ping",
    "rendezvous",
    "tcp",
    "tokio",
    "yamux",
    "kad",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
