[package]
name = "openrank-sdk"
description = "OpenRank - SDK"
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
openrank-common = { path = "../common", version = "0.0.1" }
serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
alloy-rlp = { workspace = true }
karyon_jsonrpc = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
csv = "1.3.0"
clap = { version = "4.5.9", features = ["derive"] }
