[package]
name = "openrank-sdk"
description = "OpenRank - SDK"
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
openrank-common = { workspace = true, default-features = false }

serde_json = { workspace = true }
serde = { workspace = true }
hex = { workspace = true }
alloy-rlp = { workspace = true }
jsonrpsee = { workspace = true, features = ["client"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
dotenv = { workspace = true }
rand = { workspace = true }
csv = "1.3.0"
clap = { version = "4.5.9", features = ["derive"] }
getset = { workspace = true }
