[package]
name = "openrank-sequencer"
description = "OpenRank - Sequencer Node"
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrank-common = { path = "../common", version = "0.0.1" }
futures = { workspace = true }
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "gossipsub",
    "macros",
    "identify",
] }
tokio = { workspace = true, features = ["full", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
hex = { workspace = true }
rand = { workspace = true }
alloy-rlp = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
karyon_jsonrpc = { workspace = true }
toml = { workspace = true }
