[package]
name = "smart-contract-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

openrank-common = { path = "../common" }

alloy = { version = "0.3", features = ["full", "node-bindings", "signer-mnemonic", "signer-mnemonic-all-languages"] }
eyre = "0.6.12"
alloy-rlp = "0.3.8"
