[package]
name = "openrank-smart-contract-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
openrank-common = { path = "../common", version = "0.1.1" }

tokio = { workspace = true, features = ["full"] }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }

alloy = { version = "0.3", features = ["full", "node-bindings"] }
eyre = "0.6.12"
alloy-rlp = "0.3.8"
