[package]
name = "unicast"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
either = "1.11.0"
futures-timer = "3.0.3"
rand = "0.8"
void = "1.0"
futures = "0.3.30"
web-time = "1.1.0"
libp2p-core = "0.41.2"
libp2p-swarm = "0.44.2"
libp2p-identity = "0.2.9"
