[package]
name = "openrank-verifier"
description = "OpenRank - Verifier Node"
rust-version.workspace = true
license.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openrank-common = { workspace = true, features = ["db"] }
futures = { workspace = true }
libp2p = { workspace = true, features = [
    "noise",
    "ping",
    "tcp",
    "tokio",
    "yamux",
    "quic",
    "gossipsub",
    "macros",
    "identify",
] }
tokio = { workspace = true, features = ["full", "macros"] }
tracing = { workspace = true }
hex = { workspace = true, features = ["serde"] }
rand = { workspace = true }
alloy-rlp = { workspace = true }
dotenv = { workspace = true }
toml = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
k256 = { workspace = true }
getset = { workspace = true }
thiserror = { workspace = true }
jsonrpsee = { workspace = true, features = ["server", "macros"] }
